css/style.css
body {
    margin: 0;
    padding: 0;
}
main {
    position: relative;
    height: 100vh;
    padding: 5%;
}

.main {
    display: flex;
    max-width: 900px;
    gap: 50px;
    width: 100%;
    margin: auto;

}

.gradient-background {
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;

}

.material-icons-round {
    color: white;
}

.list-pomodoro {
    width: 50%;
}

.list-container {
    width: 100%;
    height: 350px;
    border-radius: 8px;
}

.title-soundcontainer {
    width: 50%;
}


.body-spacing {
    margin-bottom: 12px;
}

.blur {
    filter: blur(6px);
    pointer-events: none;
    transform: scale(1.05);
}

.menu-button {
    display: none;
}

.menu-overlay {
    display: none;
}

.overlay {
    display: flex;
    flex-direction: column;
    max-width: 900px;
    margin: auto;
}

.title-navbar{
    display: flex;
    justify-content: space-between;
}

.menu-arrow {
    padding-left: 20px;
}

.material-symbols-outlined.menu-arrow {
    font-size: 30px;
}

#mobile-sounds-list:nth-child(1){
    border-top: 1px solid #938E8E;
}

.x-links {
    margin-bottom:50px;
    text-align: right;
}

.x-links-a:hover {
    text-decoration: underline;
}
@media (max-width:800px) {
    .x-links {
        text-align: center;
    }
    
    .main {
        position: relative;
        flex-wrap: wrap;
        gap: 25px;

    }

    .menu-button {
        display: block;
        border: none;
        background: none;
    }

    .navbar {
        display: flex;
    }

    .menu-overlay {
        height: 100%;
        position: fixed;
        z-index: 1;
        top: 0;
        left: 25%;
        background-color: rgba(239, 242, 246);
        overflow-x: hidden;
        transition: 0.5s;
    }

    .menu-overlay-content {
        width: 100%;
    }

    .menu-overlay-content>ul {
        padding-left: 0;
    }

    .list-container {
        display: none;
    }

    .list-pomodoro {
        width: 100%;
    }

    .title-soundcontainer {
        width: 100%;
    }

    .main {
        max-width: 500px;
    }
    .title-navbar {
        min-width: 500px;
        margin:auto;
    }

}

@media (max-width:600px) {
    .title-navbar {
        min-width: unset;
        margin:0;
    }
}

